--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "pro-ts",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "cli-demo",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack",
-    "server": "cd dist/ && http-server --proxy http://localhost:8080?"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "url-loader": "^4.1.1",
-    "vue-loader": "^16.1.2",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.3"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "element-plus": "^1.0.1-beta.11",
-    "normalize.css": "^8.0.1",
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.1",
-    "vuex": "^4.0.0-rc.2"
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3"
   }
 }
